Colab을 통해 생성됨

--- a/python_13th_week.ipynb
+++ b/python_13th_week.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7r1SU9GQo5sV0i66ioPC3",
+      "authorship_tag": "ABX9TyN73IA37voM3JSXpaQNtgfE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,11 +56,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gJHLDQa3Xat-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b845912e-0df2-4faf-a70e-498f67cc3984"
+        "id": "gJHLDQa3Xat-"
       },
       "source": [
         "num_str = \"720\"  #형변환\n",
@@ -68,15 +64,7 @@
         "print(num_int+1, type(num_int))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "721 <class 'int'>\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -90,11 +78,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lDjoQ5CQZcKM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a49f6b65-b1b1-4256-b27e-e8f9b5a07470"
+        "id": "lDjoQ5CQZcKM"
       },
       "source": [
         "num = 100\n",
@@ -102,15 +86,7 @@
         "print(result, type(result))\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "100 <class 'str'>\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -124,11 +100,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YsWi7rV8ZjVs",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b3d454e0-849a-41c3-f96e-bccb155df575"
+        "id": "YsWi7rV8ZjVs"
       },
       "source": [
         "data = \"15.79\"\n",
@@ -136,15 +108,7 @@
         "print(data, type(data))\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "15.79 <class 'float'>\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -165,26 +129,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JkkmhmZUaKrz",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0dcea910-aa30-47d8-8f5c-d301c8a7b637"
+        "id": "JkkmhmZUaKrz"
       },
       "source": [
         "lang = 'python'\n",
         "print(lang[0], lang[2])"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "p t\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -207,26 +159,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ERB9o_MpbPCt",
-        "outputId": "0ed3cb22-020d-4bbf-eb3a-5a6135a87f04"
+        "id": "ERB9o_MpbPCt"
       },
       "source": [
         "license_plate = \"24가 2210\"\n",
         "print(license_plate[:2])"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "24\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -253,11 +193,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Tj1YnYVidlKE",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9d7cfbd5-97a1-429e-b749-9ac025247c26"
+        "id": "Tj1YnYVidlKE"
       },
       "source": [
         "name1 = \"김민수\"\n",
@@ -268,16 +204,7 @@
         "print(\"이름: %s 나이: %d\" % (name2, age2))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "이름: 김민수 나이: 10\n",
-            "이름: 이철희 나이: 13\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -294,11 +221,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gmcy7LdKeXhQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "59e5b981-b66a-4223-e2d3-b3c647cf1d8a"
+        "id": "Gmcy7LdKeXhQ"
       },
       "source": [
         "movie_rank = [\"닥터 스트레인지\", \"스플릿\", \"럭키\"]\n",
@@ -306,15 +229,7 @@
         "print(movie_rank)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['닥터 스트레인지', '스플릿', '럭키']\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -338,11 +253,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ta8mfh-ResdA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "35b21344-f47f-4b3c-d572-c36e61d47320"
+        "id": "ta8mfh-ResdA"
       },
       "source": [
         "nums = [1, 2, 3, 4, 5, 6, 7]\n",
@@ -350,16 +261,7 @@
         "print(\"min: \", min(nums))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "max:  7\n",
-            "min:  1\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -382,11 +284,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zkQaZghne46i",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ce65ff2d-ff12-4038-eb14-5a3a4bd132b3"
+        "id": "zkQaZghne46i"
       },
       "source": [
         "nums = [1, 2, 3, 4, 5]\n",
@@ -403,16 +301,7 @@
         "\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "평균 :  3.0\n",
-            "평균 :  3.0\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -437,11 +326,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ju10Iy_5fN_y",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b6ae8eb1-ee11-4f8f-847d-f57890f26515"
+        "id": "Ju10Iy_5fN_y"
       },
       "source": [
         "string = \"삼성전자/LG전자/Naver\"\n",
@@ -449,15 +334,7 @@
         "print(interest)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['삼성전자', 'LG전자', 'Naver']\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -473,11 +350,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VK88gDFEf8mW",
-        "outputId": "c84008df-94a6-4700-e030-f24ef6e38c6a"
+        "id": "VK88gDFEf8mW"
       },
       "source": [
         "inventory = {\"메로나\": [300, 20],\n",
@@ -486,15 +359,7 @@
         "print(inventory)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'메로나': [300, 20], '비비빅': [400, 3], '죠스바': [250, 100]}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -520,25 +385,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "risULaC_gQ_g",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fa163cf5-d3a4-474a-be7f-f149b361ed30"
+        "id": "risULaC_gQ_g"
       },
       "source": [
         "print(inventory[\"메로나\"][1], \"개\")"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "20 개\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -553,25 +406,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0MBkMai3hXNR",
-        "outputId": "766b18d6-3d7a-46b2-d029-d3604153eb73"
+        "id": "0MBkMai3hXNR"
       },
       "source": [
         "print(inventory[\"죠스바\"][0], \"원\")"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "250 원\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -602,27 +443,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L9GonEFJhu7Z",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bada0e6b-1ca9-4f95-a98f-50e4c14ed39c"
+        "id": "L9GonEFJhu7Z"
       },
       "source": [
         "user = input(\"입력:\")\n",
         "print(user * 2)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "입력:qqq\n",
-            "qqqqqq\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -663,6 +491,7 @@
       },
       "source": [
         "우편번호는 5자리로 구성되는데, 앞의 세자리는 구를 나타낸다. 예를들어, 강북구의 경우 010, 011, 012 세 자리로 시작한다.\n",
+        "<br> 우편번호를 입력하면, 해당 우편번호의 지역을 출력하는 코드를 작성하시오.\n",
         "\n",
         "\n",
         "\n",
@@ -682,14 +511,16 @@
         "id": "E5HlX_1ki1hS"
       },
       "source": [
-        "우편번호 = input(\"우편번호: \")\n",
-        "우편번호 = 우편번호[:3]\n",
-        "if 우편번호 in [\"010\", \"011\", \"012\"]:\n",
+        "zipcode = input(\"우편번호: \")\n",
+        "zipcode = zipcode[:3]\n",
+        "if zipcode in [\"010\", \"011\", \"012\"]:\n",
         "    print(\"강북구\")\n",
-        "elif 우편번호 in [\"014\", \"015\", \"016\"]:\n",
+        "elif zipcode in [\"013\", \"014\", \"015\"]:\n",
         "    print(\"도봉구\")\n",
+        "elif zipcode in [\"016\", \"017\", \"018\", \"019\"]:\n",
+        "    print(\"노원구\")\n",
         "else:\n",
-        "    print(\"노원구\")"
+        "    print(\"지역을 알 수 없습니다.\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -713,6 +544,7 @@
       "source": [
         "주민번호 = input(\"주민등록번호: \")\n",
         "뒷자리 = 주민번호.split(\"-\")[1]\n",
+        "\n",
         "if 0 <= int(뒷자리[1:3]) <= 8:\n",
         "    print(\"서울입니다.\")\n",
         "else:\n",
@@ -745,18 +577,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "btc = requests.get(\"https://api.bithumb.com/public/ticker/\").json()['data']"
+      ],
+      "metadata": {
+        "id": "3W3WgPkvFXX-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(btc)"
+      ],
+      "metadata": {
+        "id": "75SmSbDnFZfM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "FnLrT4FQjiCe"
       },
       "source": [
-        "import requests\n",
-        "btc = requests.get(\"https://api.bithumb.com/public/ticker/\").json()['data']\n",
+        "volatility = float(btc['max_price']) - float(btc['min_price'])   # 변동폭\n",
+        "opening_price = float(btc['opening_price'])\n",
+        "max_price = float(btc['max_price'])\n",
         "\n",
-        "변동폭 = float(btc['max_price']) - float(btc['min_price'])\n",
-        "시가 = float(btc['opening_price'])\n",
-        "최고가 = float(btc['max_price'])\n",
-        "\n",
-        "if (시가+변동폭) > 최고가:\n",
+        "if (opening_price+volatility) > max_price:\n",
         "    print(\"상승장\")\n",
         "else:\n",
         "    print(\"하락장\")"
@@ -770,7 +622,9 @@
         "id": "36Xkq2KHlyOc"
       },
       "source": [
-        "리스트에는 동물이름이 문자열로 저장돼 있다.\n",
+        "리스트에는 동물이름이 문자열로 저장돼 있다. 이때, 동물의 이름과 동물 이름의 글자수를 다음과 같이 나타내시오.\n",
+        "\n",
+        "\n",
         "리스트 = ['dog', 'cat', 'parrot']\n",
         "\n",
         "\n",
@@ -785,14 +639,14 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "nNDG2htol34N"
-      },
       "source": [
-        "리스트 = ['dog', 'cat', 'parrot']\n",
-        "for 이름 in 리스트:\n",
-        "  print(이름, len(이름))"
+        "animal_list = ['dog', 'cat', 'parrot']\n",
+        "for animal in animal_list:\n",
+        "  print(animal, len(animal))"
       ],
+      "metadata": {
+        "id": "6FvJ3vhft0Vw"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -895,9 +749,14 @@
         "id": "fPp1n9DOnA2a"
       },
       "source": [
+        "low_prices  = [100, 200, 400, 800, 1000]\n",
+        "high_prices = [150, 300, 430, 880, 1000]\n",
+        "\n",
         "volatility = []\n",
         "for i in range(len(low_prices)) :\n",
-        "    volatility.append(high_prices[i] - low_prices[i])"
+        "    volatility.append(high_prices[i] - low_prices[i])\n",
+        "\n",
+        "print(volatility)"
       ],
       "execution_count": null,
       "outputs": []
@@ -950,8 +809,7 @@
         "id": "iPrenmpbphgv"
       },
       "source": [
-        "print_keys ({\"이름\":\"김말똥\", \"나이\":30, \"성별\":0})\n",
-        "\n",
+        "딕셔너리를 함수의 입력으로 넣으면, 아래와 같이 딕셔너리의 키를 화면에 출력하는 print_keys 함수를 정의하라.\n",
         "\n",
         "\n",
         "```\n",
@@ -971,8 +829,8 @@
       },
       "source": [
         "def print_keys(dic):\n",
-        "    for keys in dic.keys():\n",
-        "        print(keys)"
+        "    for key in dic.keys():\n",
+        "        print(key)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1004,6 +862,18 @@
         "    url = \"www.\" + string + \".com\"\n",
         "    return url"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "full_url = make_url(\"google\")\n",
+        "print(\"full_url_result : \",full_url)"
+      ],
+      "metadata": {
+        "id": "1t4rI7ZPTsDI"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -1042,12 +912,25 @@
         "id": "ihDLY1ykqH5e"
       },
       "source": [
-        "def make_list (string) :\n",
+        "def make_list (string):\n",
         "    my_list = []\n",
-        "    for 변수 in string :\n",
-        "        my_list.append(변수)\n",
+        "    for v in string :\n",
+        "        my_list.append(v)\n",
         "    return my_list"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_list = make_list(\"hello CUK\")\n",
+        "\n",
+        "print(test_list)"
+      ],
+      "metadata": {
+        "id": "gcf7iBRcVjon"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -1057,9 +940,22 @@
         "id": "H2nawV09qLZM"
       },
       "source": [
-        "def make_list (string) :\n",
+        "def make_list (string):\n",
         "    return list(string)"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_list = make_list(\"hello CUK\")\n",
+        "\n",
+        "print(test_list)"
+      ],
+      "metadata": {
+        "id": "zDYF8aS_WdeB"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -1091,8 +987,21 @@
         "    for item in items:\n",
         "        if item % 2 == 0:\n",
         "            result.append(item)\n",
-        "    return result"
+        ""
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "even_list = pickup_even([1,2,3,4,5,6,7,8,9,10])\n",
+        "\n",
+        "print(even_list)"
+      ],
+      "metadata": {
+        "id": "JF3V2BNQWzC-"
+      },
       "execution_count": null,
       "outputs": []
     }
